--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,10 +86,9 @@ generate_messages(
 ##     and list every .cfg file to be processed
 
 ## Generate dynamic reconfigure parameters in the 'cfg' folder
-# generate_dynamic_reconfigure_options(
-#   cfg/DynReconf1.cfg
-#   cfg/DynReconf2.cfg
-# )
+generate_dynamic_reconfigure_options(
+  cfg/race_manager.cfg
+)
 
 ###################################
 ## catkin specific configuration ##
